# lambda-cloudwatch-logs-subscription-filter

./: .gitignore  README.md  pyproject.toml  request_test.py  subscription_filter.py
.github/workflows/: deploy.yml
