[tool.poetry]
name = "lambda-cloudwatch-logs-subscription-filter"
version = "0.1.0"
description = "lambda function for cloudwatch logs subscription filter"
authors = ["KKamJi <xowl5460@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
requests = "^2.32.3"
boto3 = "^1.35.66"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
